# fine-tune-llm

./: .gitignore  ft.py  ft_accelerate.py  ft_doly_15k.py  ft_example.py  infer.py  merge_rola.py  pyproject.toml  test_model.py
datasets/: simple_markdown_with_answer.json
datasets/simple_markdown/: md1-0.md  md1-1.md  md2-0.md  md2-2.md
datasets/simple_markdown_with_answer/: md1-0.md  md1-00.md  md1-1.md  md1-2.md  md1-22.md  md1-3.md  md1-33.md  md1-4.md  md1-merge-1.md  md1-merge-2.md  md2-0.md  md2-00.md  md2-2.md  md2-3.md  md2-33.md  md2-4.md  md2-merge-1.md  md2-merge-2.md
datasets/smd_with_rfp/: md1-merge-11.md  md1-merge-12.md  md3-0.m  md3-0.md  md3-1.m  md3-1.md  md3-2.md  md3-3.md  md3-merge-1.m  md3-merge-12.md  md3-merge-3.m  md3-merge-32.md  md3-merge-33_s.md  md4-2.md  md4-merge-2.m  md4-merge-22.md  md4-merge-22_s.md
references/: fine_tuning_llama2_colab.py  ft_with_accelerator.py  llama2_finetuning_gpu.ipynb  llama2_finetuning_gpu.py
sft_lib/: convert_md_files_to_json.py  dataset_utils.py  dataset_utils_dolly_ds.py  dataset_utils_old.py  dataset_utils_with_diff_batch_length.py  dataset_utils_with_diff_batch_tensor_length.py  model_utils.py  prompt_utils.py
