[tool.poetry]
name = "fine-tune-llm"
version = "0.1.0"
description = ""
authors = ["Zhibin Lu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
bitsandbytes = "^0.41.2.post2"
pandas = "^2.1.3"
torch = "^2.1.1"
peft = "^0.6.2"
transformers = "^4.35.2"
fire = "^0.5.0"
accelerate = "^0.25.0"
ipython = "^8.18.1"
scipy = "^1.11.4"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
datasets = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
